<resources>
    <string name="mapKey">AIzaSyA4JD0SP0vetiXq0z50xvu7ZR18hfLtqzg</string><!--AIzaSyDl3pJN233SScRGUQQj7-Whwyvnty8mqbk</string>-->
    <string name="app_name">Online Medic App</string>
    <string name="image">ProfilePic</string>
    <string name="enter_mobile">Enter your mobile number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register Now</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="login">Sign in</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="terms">Terms and Conditions</string>
    <string name="agree_to_terms">I accept the</string>
    <string name="logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="payment">Payment</string>
    <string name="home">Home</string>
    <string name="update">Update</string>
    <string name="price_alert">Price Alert</string>
    <string name="ok">Ok</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="medicine">Medicine</string>
    <string name="lab_test">Lab Tests</string>
    <string name="health_care">Healthcare</string>
    <string name="top_products">Top Products</string>
    <string name="health_checkup">Health Checkups</string>
    <string name="covid_care">Covid Care</string>
    <string name="consult_a_doctor">Consult A Doctor</string>
    <string name="consult">Consult</string>
    <string name="fever_and_infection">Fever And Infection</string>
    <string name="account">Account</string>
    <string name="mobile">Mobile Number</string>
    <string name="search_products">Search products</string>
    <string name="view_all_results">View All Results</string>
    <string name="tab">Tablet</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="_15_in_strip">15 in strip</string>
    <string name="_23">$23</string>
    <string name="description">Description:</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="wrong_no">Wrong number?</string>
    <string name="dean">Dean</string>
    <string name="winchester">Winchester</string>
    <string name="dr_winchester_is_a_physician_in_uk_with_9_years_experience_in_general_and_internal_respiratory_medicine_dr_winchester_has_worked_in_aiims_uk_and_max_superspeciality_hospital_previously_dr_winchester_is_gold_medallist_in_his_md_currently_practising_online_and_visiting_consultant_in_3_hospitals_all_over_london_dr_winchester_has_good_experience_in_treating_thyroid_diabetes_b_p_tuberculosis_asthma_bronchitis_fever_chronic_cough_breathing_problems_sleep_study_with_a_fare_number_of_satisfied_patients">Dr. Winchester is a physician in UK with 19 years experience in general and internal(respiratory) medicine. He has worked in Cambridge University Hospital previously. He is Gold medallist in his MD and currently practising online. He has good experience in treating thyroid ,diabetes, B.P, tuberculosis, asthma, bronchitis, fever, chronic cough,breathing problems, sleep study, with a fare number of satisfied patients.</string>
    <string name="_91_123456789">+91-123456789</string>
    <string name="book">Book an appointment</string>
    <string name="harley_street_health_centre">Harley Street Health Centre</string>
    <string name="our_experienced_gps_can_help_with_many_ear_nose_and_throat_conditions_and_can_also_offer_a_fast_track_referral_to_our_specialist_partners_where_needed_experienced_doctors_and_a_professional_team_along_with_up_to_date_with_the_latest_treatments_and_testing">Our experienced GPs can help with many ear, nose and throat conditions and can also offer a fast-track referral to our specialist partners where needed. Experienced doctors and a professional team along with Up-to-date with the latest treatments and testing.</string>
    <string name="contact">Emergency Contact</string>
    <string name="general_guidelines">General Guidelines:</string>
    <string name="order_desc">Order Description</string>
    <string name="add_product">Add Product</string>
    <string name="add_order">Add Order</string>
</resources>