<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_scrollFlags="scroll|enterAlways" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/tvProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/tab"
            android:drawablePadding="10dp"
            android:text="@string/paracetamol"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/tvProductQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/tab"
            android:drawablePadding="10dp"
            android:text="@string/_15_in_strip"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/tab"
            android:drawablePadding="10dp"
            android:text="@string/_23"
            android:textSize="18sp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/tab"
            android:drawablePadding="10dp"
            android:textSize="18sp" />

        <TextView
            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/tvDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/tab"
            android:drawablePadding="10dp"
            android:textSize="18sp" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/addProduct"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_solid"
            android:text="@string/add_order"
            android:textColor="@color/white"
            app:spinning_bar_color="@color/white"
            app:spinning_bar_width="4dp"
            app:spinning_bar_padding="2dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>