<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:clipToPadding="false"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileAvatar"
                android:scaleType="centerCrop"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/healthcare"
                android:background="@drawable/person"
                android:contentDescription="@string/image"/>

            <TextView
                android:id="@+id/tvFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/wire_drawable"
                android:drawablePadding="10dp"
                android:textSize="13sp"
                android:text="@string/harley_street_health_centre"
                android:textColor="@color/black"
                android:autofillHints="@string/first_name" />

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:background="@drawable/wire_drawable"
                android:drawablePadding="10dp"
                android:hint="@string/mobile"
                android:text="@string/_91_123456789"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:autofillHints="@string/mobile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:background="@drawable/wire_drawable"
                android:drawablePadding="10dp"
                android:hint="@string/mobile"
                android:text="@string/our_experienced_gps_can_help_with_many_ear_nose_and_throat_conditions_and_can_also_offer_a_fast_track_referral_to_our_specialist_partners_where_needed_experienced_doctors_and_a_professional_team_along_with_up_to_date_with_the_latest_treatments_and_testing"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:autofillHints="@string/mobile" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/consultButton"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_solid"
                android:text="@string/book"
                android:textColor="@color/white"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_width="4dp"
                app:spinning_bar_padding="2dp"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>



    </LinearLayout>

</ScrollView>