<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/wire_drawable"
    android:id="@+id/layoutContainer"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.85"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/tab"
            android:drawablePadding="10dp"
            android:text="@string/paracetamol"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvProductQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/tab"
            android:drawablePadding="10dp"
            android:text="@string/_15_in_strip"
            android:textSize="13sp" />
    </LinearLayout>

    <ImageView
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:padding="4dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15"
        android:src="@drawable/ic_baseline_navigate_next_24" />

</LinearLayout>
