<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/loginIcon"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@drawable/ambulance" />


        <LinearLayout
            android:id="@+id/layoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginIcon"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/textViewHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="25dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvLoginMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60sp"
                android:autofillHints="@string/enter_mobile"
                android:background="@drawable/wire_drawable"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                android:drawablePadding="10dp"
                android:hint="@string/enter_mobile"
                android:inputType="phone"
                android:padding="15dp"
                android:textSize="13sp" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/tvLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_solid"
                android:text="@string/login"
                android:textColor="@color/white"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="2dp"
                app:spinning_bar_width="4dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/loginOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60sp"
                android:autofillHints="@string/enter_mobile"
                android:background="@drawable/wire_drawable"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                android:drawablePadding="10dp"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:padding="15dp"
                android:textSize="13sp" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/verifyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_solid"
                android:text="@string/verify"
                android:textColor="@color/white"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="2dp"
                app:spinning_bar_width="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvResendOtp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/resend_otp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvWrongNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:text="@string/wrong_no"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>